# image-operations

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  plot1d.sh
images/: mycat.pgm  mycat.ppm  mycat_grad.pgm
src/exec/: CMakeLists.txt  RGB2YCBCR.c  YCbCr.c  bin_thresh_pgm.c  bin_thresh_ppm.c  difference_pgm.c  dilate_bin_pgm.c  erode_bin_pgm.c  filtre_flou1_pgm.c  filtre_flou1_ppm.c  filtre_flou2_pgm.c  histogram_pgm.c  histogram_ppm.c  hysteresis_thresh_pgm.c  invert_pgm.c  modifY.c  norme_gradient_pgm.c  profile_pgm.c  rgb2y.c  sepYCrCb.c  tri_thresh_pgm.c
src/lib/: CMakeLists.txt  imageio.h  imgio.c  imgio.h  imgops.c  imgops.h
